# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

import("//foundation/distributedhardware/devicemanager/devicemanager.gni")

if (defined(ohos_lite)) {
} else {
  ohos_shared_library("devicemanagerext_pin_auth") {
    include_dirs = [
      "include",
      "${common_path}/include",
      "${services_path}/include/adapter",
      "${ext_path}/pin_auth/include/ability",
      "${services_path}/include/authentication",
      "${utils_path}/include",
    ]

    sources = [
      "src/ability/standard/dm_ability_manager.cpp",
      "src/pin_auth.cpp",
      "src/pin_auth_ui.cpp",
    ]

    deps = [
      "${utils_path}:devicemanagerutils",
      "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
      "//foundation/aafwk/standard/interfaces/innerkits/want:want",
      "//foundation/aafwk/standard/services/abilitymgr:abilityms",
      "//utils/native/base:utils",
    ]

    external_deps = [
      "appexecfwk_standard:appexecfwk_base",
      "appexecfwk_standard:appexecfwk_core",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "safwk:system_ability_fwk",
      "startup_l2:syspara",
    ]

    defines = [
      "HI_LOG_ENABLE",
      "DH_LOG_TAG=\"devicemanagerext\"",
      "LOG_DOMAIN=0xD004100",
    ]

    subsystem_name = "distributedhardware"

    part_name = "device_manager_base"
  }
}