# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}
import("//foundation/distributedhardware/device_manager/device_manager.gni")

if (defined(ohos_lite)) {
  shared_library("devicemanagerext_pin_auth") {
    include_dirs = [
      "include",
      "include/lite",
      "${common_path}/include",
      "${ext_path}/pin_auth/include/ability",
      "${servicesimpl_path}/include/dependency/timer",
      "${servicesimpl_path}/include/config",
      "${servicesimpl_path}/include/adapter",
      "${servicesimpl_path}/include/authentication",
      "${servicesimpl_path}/include/authentication/showconfirm/lite",
      "${servicesimpl_path}/include/ability",
      "${servicesimpl_path}/include/devicestate",
      "${servicesimpl_path}/include/discovery",
      "${servicesimpl_path}/include/dependency/commonevent",
      "${servicesimpl_path}/include/dependency/hichain",
      "${servicesimpl_path}/include/dependency/softbus",
      "${servicesimpl_path}/include/dependency/timer",
      "${services_path}/include/ipc",
      "${services_path}/include/ipc/lite",
      "${utils_path}/include",
      "${utils_path}/include/ipc/lite",
      "${servicesimpl_path}/include",
      "${innerkits_path}/native_cpp/include",
      "${common_path}/include/ipc",
      "${common_path}/include/ipc/model",
      "${innerkits_path}/native_cpp/include",
      "${innerkits_path}/native_cpp/include/ipc",
      "${innerkits_path}/native_cpp/include/ipc/lite",
      "//third_party/json/include",
      "//utils/native/base/include",
      "//utils/system/safwk/native/include",
      "//base/notification/ces_lite/frameworks/core/include",
      "//base/notification/ces_lite/interfaces/innerkits/native/include",
      "//base/security/device_auth/interfaces/innerkits",
      "//base/startup/syspara_lite/interfaces/kits",
      "//base/startup/syspara_lite/adapter/native/syspara/include",
    ]

    sources = [
      "src/ability/lite/dm_ability_manager.cpp",
      "src/lite/pin_auth_ui.cpp",
      "src/pin_auth.cpp",
    ]

    deps = [
      "${common_path}/include/show_confirm_dialog/dialog_ui/js:dialog_js_files_etc",
      "${innerkits_path}/native_cpp:devicemanagersdk",
      "${utils_path}:devicemanagerutils",
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
      "//foundation/communication/dsoftbus/sdk:softbus_client",
      "//foundation/communication/ipc/interfaces/innerkits/c/ipc:ipc_single",
      "//foundation/distributedschedule/samgr_lite/samgr:samgr",
      "//third_party/bounds_checking_function:libsec_shared",
      "//third_party/mbedtls:mbedtls_shared",
      "//utils/native/lite:utils",
    ]

    defines = [
      "LITE_DEVICE",
      "HI_LOG_ENABLE",
      "DH_LOG_TAG=\"devicemanagerext\"",
      "LOG_DOMAIN=0xD004100",
    ]
  }
} else {
  ohos_shared_library("devicemanagerext_pin_auth") {
    include_dirs = [
      "include",
      "include/standard",
      "${common_path}/include",
      "${ext_path}/pin_auth/include/ability",
      "${servicesimpl_path}/include/dependency/timer",
      "${servicesimpl_path}/include/config",
      "${servicesimpl_path}/include/adapter",
      "${servicesimpl_path}/include/authentication",
      "${servicesimpl_path}/include/authentication/showconfirm/standard",
      "${servicesimpl_path}/include/ability",
      "${servicesimpl_path}/include/devicestate",
      "${servicesimpl_path}/include/discovery",
      "${servicesimpl_path}/include/dependency/commonevent",
      "${servicesimpl_path}/include/dependency/hichain",
      "${servicesimpl_path}/include/dependency/softbus",
      "${servicesimpl_path}/include/dependency/timer",
      "${services_path}/include/ipc",
      "${services_path}/include/ipc/standard",
      "${utils_path}/include",
      "${utils_path}/include/ipc/standard",
      "${servicesimpl_path}/include",
      "${innerkits_path}/native_cpp/include",
      "${common_path}/include/ipc",
      "${common_path}/include/ipc/model",
      "${innerkits_path}/native_cpp/include",
      "${innerkits_path}/native_cpp/include/ipc",
      "${innerkits_path}/native_cpp/include/ipc/standard",
      "//third_party/json/include",
      "//utils/native/base/include",
      "//utils/system/safwk/native/include",
      "//base/notification/common_event_service/frameworks/core/include",
      "//base/notification/common_event_service/interfaces/innerkits/native/include",
      "//base/security/device_auth/interfaces/innerkits",
      "//base/startup/syspara_lite/interfaces/kits",
      "//base/startup/syspara_lite/adapter/native/syspara/include",
    ]

    sources = [
      "src/ability/standard/dm_ability_manager.cpp",
      "src/pin_auth.cpp",
      "src/standard/pin_auth_ui.cpp",
    ]

    deps = [
      "${aainnerkits_path}/ability_manager:ability_manager",
      "${aaservices_path}/abilitymgr:abilityms",
      "${ext_path}/pin_auth/input_pin_dialog/dialog_ui/js:dialog_js_files_etc",
      "${ext_path}/pin_auth/show_pin_dialog/dialog_ui/js:dialog_js_files_etc",
      "${innerkits_path}/native_cpp:devicemanagersdk",
      "${utils_path}:devicemanagerutils",
      "//foundation/arkui/ace_engine/interfaces/inner_api/ui_service_manager:ui_service_mgr",
      "//foundation/distributedhardware/device_manager/services/implementation:devicemanagerserviceimpl",
      "//utils/native/base:utils",
    ]

    external_deps = [
      "ability_base:want",
      "bundle_framework:appexecfwk_base",
      "bundle_framework:appexecfwk_core",
      "common_event_service:cesfwk_core",
      "common_event_service:cesfwk_innerkits",
      "dsoftbus:softbus_client",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "safwk:system_ability_fwk",
      "samgr_standard:samgr_proxy",
      "startup_l2:syspara",
      "startup_l2:syspara_watchagent",
    ]

    defines = [
      "HI_LOG_ENABLE",
      "DH_LOG_TAG=\"devicemanagerext\"",
      "LOG_DOMAIN=0xD004100",
    ]

    subsystem_name = "distributedhardware"

    part_name = "device_manager"
  }
}
