# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributedhardware/device_manager/device_manager.gni")

ohos_shared_library("devicemanagerext_pin_auth") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }

  cflags = [
    "-fPIC",
    "-fstack-protector-strong",
  ]

  ldflags = [
    "-Wl,-z,relro",
    "-Wl,-z,now",
  ]

  include_dirs = [
    "include",
    "include/standard",
    "${common_path}/include",
    "${devicemanager_path}/commondependency/include",
    "${ext_path}/pin_auth/include/ability",
    "${servicesimpl_path}/include/dependency/timer",
    "${servicesimpl_path}/include/config",
    "${servicesimpl_path}/include/adapter",
    "${servicesimpl_path}/include/authentication",
    "${servicesimpl_path}/include/authentication/showconfirm/standard",
    "${servicesimpl_path}/include/ability",
    "${servicesimpl_path}/include/devicestate",
    "${servicesimpl_path}/include/discovery",
    "${servicesimpl_path}/include/dependency/commonevent",
    "${servicesimpl_path}/include/dependency/hichain",
    "${servicesimpl_path}/include/dependency/softbus",
    "${services_path}/include/ipc",
    "${services_path}/include/ipc/standard",
    "${utils_path}/include",
    "${utils_path}/include/ipc/standard",
    "${servicesimpl_path}/include",
    "${innerkits_path}/native_cpp/include",
    "${common_path}/include/ipc",
    "${common_path}/include/ipc/model",
    "${innerkits_path}/native_cpp/include",
    "${innerkits_path}/native_cpp/include/ipc",
    "${innerkits_path}/native_cpp/include/ipc/standard",
  ]

  sources = [
    "src/ability/standard/dm_ability_manager.cpp",
    "src/pin_auth.cpp",
    "src/standard/pin_auth_ui.cpp",
  ]

  deps = [
    "${innerkits_path}/native_cpp:devicemanagersdk",
    "${json_path}:devicemanagerjson",
    "${servicesimpl_path}:devicemanagerserviceimpl",
  ]

  external_deps = [
    "ability_base:session_info",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "device_auth:deviceauth_sdk",
    "device_info_manager:distributed_device_profile_common",
    "device_info_manager:distributed_device_profile_sdk",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "resource_management:resmgr_napi_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"devicemanagerext\"",
    "LOG_DOMAIN=0xD004110",
    "__CJSON_USE_INT64",
  ]

  subsystem_name = "distributedhardware"
  part_name = "device_manager"
}
