# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

import("//foundation/distributedhardware/devicemanager/devicemanager.gni")

if (defined(ohos_lite)) {
  executable("devicemanagerservice") {
    sources = [ "src/ipc/lite/ipc_server_main.cpp" ]
  }
} else {
  ohos_shared_library("devicemanagerservice") {
    include_dirs = [
      "include",
      "include/config",
      "include/adapter",
      "include/authentication",
      "include/ability",
      "include/deviceinfo",
      "include/devicestate",
      "include/discovery",
      "include/dependency/commonevent",
      "include/dependency/hichain",
      "include/dependency/softbus",
      "include/dependency/timer",
      "include/ipc",
      "include/ipc/standard",
      "include/eventbus",
      "${common_path}/include",
      "${common_path}/include/ipc",
      "${common_path}/include/ipc/model",
      "${utils_path}/include",
      "${utils_path}/include/ipc/standard",
      "${innerkits_path}/native_cpp/include",
      "${innerkits_path}/native_cpp/include/ipc",
      "${innerkits_path}/native_cpp/include/ipc/standard",
      "//utils/native/base/include",
      "//utils/system/safwk/native/include",
      "//base/notification/ces_standard/frameworks/core/include",
      "//base/notification/ces_standard/interfaces/innerkits/native/include",
      "//base/security/deviceauth/interfaces/innerkits",
      "//base/startup/syspara_lite/interfaces/kits",
      "//base/startup/syspara_lite/adapter/native/syspara/include",
      "//third_party/json/include",
    ]

    sources = [
      "src/ability/standard/dm_ability_manager.cpp",
      "src/adapter/standard/dm_adapter_manager.cpp",
      "src/authentication/auth_message_processor.cpp",
      "src/authentication/auth_request_state.cpp",
      "src/authentication/auth_response_state.cpp",
      "src/authentication/auth_ui.cpp",
      "src/authentication/dm_auth_manager.cpp",
      "src/config/dm_config_manager.cpp",
      "src/dependency/commonevent/dm_common_event_manager.cpp",
      "src/dependency/hichain/hichain_connector.cpp",
      "src/dependency/softbus/softbus_connector.cpp",
      "src/dependency/softbus/softbus_session.cpp",
      "src/dependency/timer/dm_timer.cpp",
      "src/device_manager_service.cpp",
      "src/device_manager_service_listener.cpp",
      "src/deviceinfo/dm_device_info_manager.cpp",
      "src/devicestate/dm_device_state_manager.cpp",
      "src/discovery/dm_discovery_manager.cpp",
      "src/ipc/standard/ipc_cmd_parser.cpp",
      "src/ipc/standard/ipc_server_client_proxy.cpp",
      "src/ipc/standard/ipc_server_listener.cpp",
      "src/ipc/standard/ipc_server_stub.cpp",
    ]

    deps = [
      "${innerkits_path}/native_cpp:devicemanagersdk",
      "${utils_path}:devicemanagerutils",
      "//base/security/deviceauth/services:deviceauth_sdk",
      "//foundation/aafwk/standard/interfaces/innerkits/ability_manager:ability_manager",
      "//foundation/aafwk/standard/interfaces/innerkits/want:want",
      "//foundation/aafwk/standard/services/abilitymgr:abilityms",
      "//utils/native/base:utils",
    ]

    defines = [
      "HI_LOG_ENABLE",
      "DH_LOG_TAG=\"devicemanagerservice\"",
      "LOG_DOMAIN=0xD004100",
    ]

    external_deps = [
      "appexecfwk_standard:appexecfwk_base",
      "appexecfwk_standard:appexecfwk_core",
      "appexecfwk_standard:libeventhandler",
      "ces_standard:cesfwk_core",
      "ces_standard:cesfwk_innerkits",
      "dsoftbus_standard:softbus_client",
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "safwk:system_ability_fwk",
      "samgr_standard:samgr_proxy",
      "startup_l2:syspara",
      "startup_l2:syspara_watchagent",
    ]

    subsystem_name = "distributedhardware"

    part_name = "device_manager_base"
  }
}
